--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
             <div class="modal-body" class="center">
               <form id="formu2" novalidate action="javascript:void(0);" onsubmit="return modificar();">
+                  <input type="hidden" id="id_update>
                 <div class="row">
                     <div class="col-6">
                         <label for="name" class="form-label">Nombre</label>
